Image Layout Started

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -58,4 +58,13 @@ table {
 
 html {
   font-size: 62.5%;
+
+	body {
+		background: radial-gradient(ellipse at top, #000013, black),
+	              radial-gradient(ellipse at bottom, #020b39, black);
+		box-sizing: border-box;
+	}
 }
+
+@import 'App.less';
+@import '../components/RoverImage/RoverImage.less';
