--- a/src/css/index.css
+++ b/src/css/index.css
@@ -137,3 +137,25 @@ table {
 html {
   font-size: 62.5%;
 }
+html body {
+  background: radial-gradient(ellipse at top, #000013, black), radial-gradient(ellipse at bottom, #020b39, black);
+  box-sizing: border-box;
+}
+.App {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 100%;
+  max-width: 1100px;
+  margin: 0 auto;
+  border: 1px solid red;
+}
+.image-container img {
+  max-height: 200px;
+  width: 100%;
+  max-width: 300px;
+  border-radius: 3px;
+}
+.image-container .image-container__text {
+  color: white;
+}
