--- a/src/components/RoverImage/RoverImage.less
+++ b/src/components/RoverImage/RoverImage.less
@@ -4,7 +4,18 @@
    width: 100%;
    max-width: 300px;
 
-   border-radius: 3px;
+   margin: 10px;
+   border-radius: 15px 0px 15px 0px;
+
+   filter: blur(.75px);
+   opacity: .6;
+
+   transition: filter .5s, opacity .3s;
+
+   &:hover {
+     filter: none;
+     opacity: 1;
+   }
   }
 
   .image-container__text {
