--- a/src/css/index.css
+++ b/src/css/index.css
@@ -154,7 +154,15 @@ html body {
   max-height: 200px;
   width: 100%;
   max-width: 300px;
-  border-radius: 3px;
+  margin: 10px;
+  border-radius: 15px 0px 15px 0px;
+  filter: blur(0.75px);
+  opacity: 0.6;
+  transition: filter 0.5s, opacity 0.3s;
+}
+.image-container img:hover {
+  filter: none;
+  opacity: 1;
 }
 .image-container .image-container__text {
   color: white;
