--- a/src/components/RoverImage/RoverImage.less
+++ b/src/components/RoverImage/RoverImage.less
@@ -6,7 +6,7 @@
    width: 100%;
    max-width: 300px;
 
-   margin: 10px;
+   margin: 0 3px;
    border-radius: 15px 0px 15px 0px;
 
    filter: blur(.75px);
@@ -33,7 +33,7 @@
   top: 0;
   left: 0;
 
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.7);
   z-index: 9001;
 
   img {
