--- a/src/less/App.less
+++ b/src/less/App.less
@@ -1,11 +1,15 @@
 .App {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
 
   width: 100%;
-  max-width: 1100px;
+  max-width: 1300px;
 
   margin: 0 auto;
-  border: 1px solid red;
+  padding-left: 5%;
+}
+
+.particles-bg {
+  position: fixed;
+  z-index: -90001;
 }
