Image Lay-out Implemented, Title Added, Page Navigation Added

--- a/src/components/RoverImage/RoverImage.less
+++ b/src/components/RoverImage/RoverImage.less
@@ -2,15 +2,14 @@
   img {
    cursor: pointer;
 
-   max-height: 200px;
-   width: 100%;
-   max-width: 300px;
+   height: 150px;
+   width: 200px;
 
    margin: 0 3px;
    border-radius: 15px 0px 15px 0px;
 
    filter: blur(.75px);
-   opacity: .6;
+   opacity: .75;
 
    transition: filter .5s, opacity .3s;
 
@@ -26,7 +25,7 @@
 }
 
 .fullscreen {
-  height: 100%;
+
   width: 100%;
 
   position: fixed;
