--- a/src/css/index.css
+++ b/src/css/index.css
@@ -146,6 +146,13 @@ html body {
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   box-sizing: border-box;
 }
+div h1 {
+  text-align: center;
+  font-size: 7rem;
+  color: white;
+  margin: 30px 0;
+  margin-right: 125px;
+}
 .App {
   display: flex;
   flex-wrap: wrap;
@@ -160,13 +167,12 @@ html body {
 }
 .image-container img {
   cursor: pointer;
-  max-height: 200px;
-  width: 100%;
-  max-width: 300px;
+  height: 150px;
+  width: 200px;
   margin: 0 3px;
   border-radius: 15px 0px 15px 0px;
   filter: blur(0.75px);
-  opacity: 0.6;
+  opacity: 0.75;
   transition: filter 0.5s, opacity 0.3s;
 }
 .image-container img:hover {
@@ -177,7 +183,6 @@ html body {
   color: white;
 }
 .fullscreen {
-  height: 100%;
   width: 100%;
   position: fixed;
   top: 0;
@@ -218,4 +223,8 @@ html body {
   font-weight: bold;
   letter-spacing: 2px;
   color: #00FF1B;
+}
+.pagination {
+  margin: 40px 0 30px 50%;
+  transform: translateX(-25%);
 }
