--- a/src/less/App.less
+++ b/src/less/App.less
@@ -1,3 +1,14 @@
+div {
+  h1 {
+    text-align: center;
+    font-size: 7rem;
+    color: white;
+
+    margin: 30px 0;
+    margin-right: 125px;
+  }
+}
+
 .App {
   display: flex;
   flex-wrap: wrap;
